--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/pizza.html">Recipe Title</a>
+    <a href="recipes/hotdog.html">Recipe Title</a>
+    <a href="recipes/burger.html">Recipe Title</a>
 </body>
 </html>
