Added images, made links on separate lines, filled pages with content, added return to homepage link.
Images add to user experience, return to homepage link makes page more accessable.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Recipe Title</a>
-    <a href="recipes/hotdog.html">Recipe Title</a>
-    <a href="recipes/burger.html">Recipe Title</a>
+    <a href="recipes/pizza.html">Pizza</a>
+    <br>
+    <a href="recipes/hotdog.html">Hotdog</a>
+    <br>
+    <a href="recipes/burger.html">Burger</a>
 </body>
 </html>
