--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Burger Recipe</h1>
+    <img src="../img/burger.png" alt="Image of a burger." height="300" width="300">
+    <p>The best burger recipe for summertime grilling! This juicy burger is jam-packed with all kinds of stuff and has no tasteless bread crumbs. Serve on buns with your favorite condiments.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 ½ pounds lean ground beef</li>
+        <li>½ onion, finely chopped</li>
+        <li>½ cup shredded Colby Jack or Cheddar cheese</li>
+        <li>1 egg</li>
+        <li>1 ounce dry onion soup mix</li>
+        <li>1 clove garlic, minced</li>
+        <li>1 tablespoon garlic powder</li>
+        <li>1 teaspoon soy sauce</li>
+        <li>1 teaspoon Worcestershire sauce</li>
+        <li>1 teaspoon dried parsley</li>
+        <li>1 teaspoon dried basil</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>½ teaspoon crushed dried rosemary</li>
+        <li>salt and pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Combine the ingredients in a bowl</li>
+        <li>Make 4 patties</li>
+        <li>Grill the patties until the juices run clear and the meat is no longer pink in the center</li>
+    </ol>
+    <a href="../index.html">Back to Homepage</a>
 </body>
 </html>
